--- a/templates/minio.service.j2
+++ b/templates/minio.service.j2
@@ -1,20 +1,19 @@
-#
+# {{ ansible_managed }}
 
 [Unit]
 Description             = MinIO
 Documentation           = https://docs.min.io
 Wants                   = network-online.target
 After                   = network-online.target
-AssertFileIsExecutable  = /usr/local/bin/minio
+AssertFileIsExecutable  = {{ minio.binary }}
 
 [Service]
-WorkingDirectory        = /usr/local/
-User                    = minio-user
-Group                   = minio-user
-EnvironmentFile         = /etc/default/minio
+WorkingDirectory        = {{ minio.workdir }}
+User                    = {{ minio.user }}
+Group                   = {{ minio.user }}
+EnvironmentFile         = /etc/default/minio-{{ item.value.name }}
 
-ExecStartPre=/bin/bash -c "if [ -z \"${MINIO_VOLUMES}\" ]; then echo \"Variable MINIO_VOLUMES not set in /etc/default/minio\"; exit 1; fi"
-ExecStart               = /usr/local/bin/minio server $MINIO_OPTS $MINIO_VOLUMES
+ExecStart               = {{ minio.binary }} server $MINIO_OPTS $MINIO_VOLUMES
 Restart                 = always
 LimitNOFILE             = 65536
 TimeoutStopSec          = infinity
@@ -22,4 +21,4 @@ SendSIGKILL             = no
 
 [Install]
 WantedBy                = multi-user.target
-
+Alias                   = minio-server-{{ item.value.name }}.service
