--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -18,9 +18,6 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
 
-    # server_names_hash_bucket_size 64;
-    # server_name_in_redirect off;
-
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -31,13 +28,15 @@ http {
     gzip_disable "msie6";
 
 
-    {% for i in minio.tenants.items() %}
-    upstream {{ i }} {
+{% for i in minio.tenants|dict2items %}
+    upstream {{ i.value.name }} {
+        ip_hash;
         {% for j in groups.s3 %}
-        http://{{ j }}
+    server {{ j }}:{{ i.value.port }} max_fails=5 fail_timeout=15s;
         {% endfor %}
     }
-    {% endfor %}
+
+{% endfor %}
 
 
     server {
@@ -47,21 +46,20 @@ http {
         ignore_invalid_headers off;
         client_max_body_size 0;
         proxy_buffering off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_connect_timeout  300;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
 
-        location / {
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Host $http_host;
 
-            proxy_connect_timeout  300;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-
-            proxy_pass http://localhost:9000; # If you are using docker-compose this would be the hostname i.e. minio
-            # Health Check endpoint might go here. See https://www.nginx.com/resources/wiki/modules/healthcheck/
-            # /minio/health/live;
+{% for i in minio.tenants|dict2items %}
+        location /{{ i.value.name }}/ {
+        proxy_pass http://{{ i.value.name }};
         }
-    }
 
+{% endfor %}
+    }
 }
