--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -10,10 +10,10 @@ events {
 }
 
 http {
-
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
+    gzip on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
@@ -24,23 +24,22 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    gzip on;
-    gzip_disable "msie6";
-
-
 {% for i in minio.tenants|dict2items %}
     upstream {{ i.value.name }} {
         ip_hash;
-        {% for j in groups.s3 %}
-    server {{ j }}:{{ i.value.port }} max_fails=5 fail_timeout=15s;
-        {% endfor %}
+{% for j in groups.s3 %}
+        server {{ j }}:{{ i.value.port }} max_fails=5 fail_timeout=15s;
+{% endfor %}
     }
 
 {% endfor %}
 
-
     server {
-        listen 80;
+
+{% for i in keepalived.vrrp_instances|dict2items %}
+        listen {{ i.value.virtual_ipaddress }}:80;
+{% endfor %}
+
         server_name {{ minio.domain }};
 
         ignore_invalid_headers off;
@@ -67,15 +66,13 @@ http {
         listen {{ nginx.status_socket }};
         server_name status.localhost;
 
-        {% for i in nginx.status_allow_from %}
+{% for i in nginx.status_allow_from %}
         allow {{ i }};
-        {% endfor %}
+{% endfor %}
         deny all;
 
         location = /status {
             stub_status;
         }
     }
-
-
 }
