--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -36,9 +36,8 @@ http {
 
     server {
 
-{% for i in keepalived.vrrp_instances|dict2items %}
-        listen {{ i.value.virtual_ipaddress }}:80;
-{% endfor %}
+{% for i in minio.tenants|dict2items %}
+        listen 0.0.0.0:{{ i.value.port }};
 
         server_name {{ minio.domain }};
 
@@ -53,9 +52,7 @@ http {
         proxy_http_version 1.1;
         proxy_set_header Connection "";
 
-
-{% for i in minio.tenants|dict2items %}
-        location /{{ i.value.name }}/ {
+        location / {
             proxy_pass http://{{ i.value.name }};
         }
 
